# devcontainer-python

./: Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
