[project]
name = "devcontainer-python"
version = "0.1.0"
description = "Python project with uv package manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
